fix image overflow

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -8,6 +8,7 @@
   }
   .img-container {
     position: relative;
+    overflow: hidden;
     img {
       width: 200%;
       margin-left: -50%;
